@@ -1,17 +1,14 @@
 package com.ultreon.craft.world.gen;
 
 import com.badlogic.gdx.math.GridPoint2;
-import com.badlogic.gdx.math.GridPoint3;
-import com.badlogic.gdx.math.MathUtils;
-import com.badlogic.gdx.math.Vector3;
 import com.google.common.collect.Lists;
+import com.ultreon.libs.commons.v0.vector.Vec3d;
+import com.ultreon.libs.commons.v0.vector.Vec3i;
 
-import java.util.HashSet;
-import java.util.List;
-import java.util.Set;
+import java.util.*;
 
 public class BiomeCenterFinder {
-    public static List<GridPoint2> neighbours8Direction = List.of(
+    public static List<GridPoint2> neighbours8Direction = Arrays.asList(
             new GridPoint2(0, 1),
             new GridPoint2(1, 1),
             new GridPoint2(1, 0),
@@ -22,19 +19,17 @@ public class BiomeCenterFinder {
             new GridPoint2(-1, 1)
     );
 
-    public static List<GridPoint3> calcBiomeCenters(Vector3 playerPosition, int drawRange, int chunkSize) {
-        int biomeLength = chunkSize;
-
-        GridPoint3 origin = new GridPoint3(MathUtils.round(playerPosition.x / biomeLength) * biomeLength, 0, MathUtils.round(playerPosition.z / biomeLength));
-        Set<GridPoint3> biomeCentersTemp = new HashSet<>();
+    public static ArrayList<Vec3i> calcBiomeCenters(Vec3d playerPosition, int drawRange, int chunkSize) {
+        Vec3i origin = new Vec3i((int) (Math.round(playerPosition.x / chunkSize) * chunkSize), 0, (int) Math.round(playerPosition.z / chunkSize));
+        Set<Vec3i> biomeCentersTemp = new HashSet<>();
 
         biomeCentersTemp.add(origin);
 
         for (GridPoint2 offsetXZ : neighbours8Direction) {
-            GridPoint3 newBiomePoint1 = new GridPoint3(origin.x + offsetXZ.x * biomeLength, 0, origin.z + offsetXZ.y * biomeLength);
-            GridPoint3 newBiomePoint2 = new GridPoint3(origin.x + offsetXZ.x * biomeLength, 0, origin.z + offsetXZ.y * 2 * biomeLength);
-            GridPoint3 newBiomePoint3 = new GridPoint3(origin.x + offsetXZ.x * 2 * biomeLength, 0, origin.z + offsetXZ.y * biomeLength);
-            GridPoint3 newBiomePoint4 = new GridPoint3(origin.x + offsetXZ.x * 2 * biomeLength, 0, origin.z + offsetXZ.y * 2 * biomeLength);
+            Vec3i newBiomePoint1 = new Vec3i(origin.x + offsetXZ.x * chunkSize, 0, origin.z + offsetXZ.y * chunkSize);
+            Vec3i newBiomePoint2 = new Vec3i(origin.x + offsetXZ.x * chunkSize, 0, origin.z + offsetXZ.y * 2 * chunkSize);
+            Vec3i newBiomePoint3 = new Vec3i(origin.x + offsetXZ.x * 2 * chunkSize, 0, origin.z + offsetXZ.y * chunkSize);
+            Vec3i newBiomePoint4 = new Vec3i(origin.x + offsetXZ.x * 2 * chunkSize, 0, origin.z + offsetXZ.y * 2 * chunkSize);
 
             biomeCentersTemp.add(newBiomePoint1);
             biomeCentersTemp.add(newBiomePoint2);
